# old-3d-editor

./: .gitignore  1.2d3d  CMakeLists.txt  Diplom.cpp  README.md  build.py  clean.py  geom.cpp  geom.h  resource.h  stdafx.cpp
src/: Diplom.rc  dialogs.cpp  dialogs.h  diplom.cpp  geom.cpp  geom.h  project.cpp  project.h  renderTarget.cpp  renderTarget.h  resource.h
